@@ -10,28 +10,29 @@
     <import addon="script.module.requests"          version="2.4.3"/>
     <import addon="script.module.future"            version="0.16.0.1"/>
   	<import addon="script.module.html5lib"          version="0.999.0"/>
+	<import addon="plugin.video.youtube" 		    version="5.1.7" />
   </requires>
   <extension point="xbmc.python.pluginsource" 	library="addon.py">
     <provides>video</provides>
   </extension>
   <extension point="xbmc.addon.metadata">
-	<summary lang="en_GB">Watch tech videos from Tweakers.net (dutch)</summary>
-	    <description lang="en_GB">Watch tech videos from Tweakers.net (dutch)</description>
-	    <disclaimer lang="en_GB">For bugs, requests or general questions visit the tweakers.net thread on the Kodi forum.</disclaimer>
-	<summary lang="nl_NL">Bekijk technologie videos van Tweakers.net (dutch)</summary>
-	    <description lang="nl_NL">Bekijk technologie videos van Tweakers.net (dutch)</description>
-	    <disclaimer lang="nl_NL">Bugs of andere feedback op deze plugin kan geplaatst worden in de Tweakers.net thread op het Kodi forum.</disclaimer>
+	<summary lang="en">Watch tech videos from Tweakers.net (dutch)</summary>
+	<description lang="en">Watch tech videos from Tweakers.net (dutch)</description>
+	<disclaimer lang="en">For bugs, requests or general questions visit the tweakers.net thread on the Kodi forum.</disclaimer>
+	<summary lang="nl">Bekijk technologie videos van Tweakers.net (dutch)</summary>
+	<description lang="nl">Bekijk technologie videos van Tweakers.net (dutch)</description>
+	<disclaimer lang="nl">Bugs of andere feedback op deze plugin kan geplaatst worden in de Tweakers.net thread op het Kodi forum.</disclaimer>
     <language>nl</language>
     <license>GNU GENERAL PUBLIC LICENSE. Version 3, June 2007</license>
     <forum>https://forum.kodi.tv/showthread.php?tid=167812</forum>
     <website>https://www.tweakers.net</website>
     <source>https://github.com/skipmodea1/plugin.video.tweakers</source>
-    <email></email>
   	<platform>all</platform>
     <news>v1.1.10 (2018-10-01)
     - removing non-ascii characters in title in parameters to prevent UnicodeDecodeError: 'ascii' codec can't decode ...
     The error occured when doing urllib.parse.parse_qs of the parameters
     - using youtube now (website change)
+    - removed video quality setting as the youtube addon is used
     </news>
   </extension>
 </addon>
