@@ -2,6 +2,7 @@ v1.1.10 (2018-10-01)
 - removing non-ascii characters in title in parameters to prevent UnicodeDecodeError: 'ascii' codec can't decode ...
 The error occured when doing urllib.parse.parse_qs of the parameters
 - using youtube now (website change)
+- removed video quality setting as the youtube addon is used
 
 v1.1.9 (2018-01-12)
 - removed looking for video dialogue
